--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo-png.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Veridian AI - Custom AI Solutions & Training for Businesses</title>
+    <meta name="description" content="Transform your business with Veridian's custom AI chatbots, automation solutions, and expert training. IBM-certified AI development expertise for enterprise solutions." />
+    <meta name="keywords" content="AI solutions, business automation, AI chatbots, enterprise AI, AI training, machine learning consulting" />
+    
+    <!-- Open Graph / Social Media Meta Tags -->
+    <meta property="og:title" content="Veridian AI - Custom AI Solutions & Training" />
+    <meta property="og:description" content="Transform your business with custom AI solutions. Expert AI development and training services." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://veridianagency.com" />
+    <meta property="og:image" content="/og-image.jpg" />
+    
+    <!-- Additional SEO Meta Tags -->
+    <link rel="canonical" href="https://veridianagency.com" />
+    <meta name="robots" content="index, follow" />
   </head>
   <body>
     <div id="root"></div>
